--- a/src/app/register/register-main/register-main.component.html
+++ b/src/app/register/register-main/register-main.component.html
@@ -1,7 +1,12 @@
-<div class="container padding-top">
-	<div class="register-main-container ">
-		<h3 class="title">Contact Form</h3>
-		<div class="register-container">contact-main works!</div>
-	</div>
+<div class="container register-main-container padding-top">
+  <div class="register-container">
+    User Name : <input type="text" name="username" [(ngModel)]="username">
+    Password : <input type="password" name="password" [(ngModel)]="password">
+    email : <input type="text" name="email" [(ngModel)]="email">
+    name : <input type="name" name="name" [(ngModel)]="name">
+    role : <input type="role" name="role" [(ngModel)]="role">
+  </div>
+  <button (click)=register() class="btn btn-success">
+    Register
+  </button>
 </div>
-
